<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="account_type">com.gateway.lead_hunter.login</string>
    <string name="app_name"><b>LeadHunter</b></string>
    <string name="app_package">com.gateway.lead_hunter</string>
    <string name="welcome">Welcome %s</string>
    <string name="logout_button">Logout</string>
    <string name="fetch_contacts_button">Fetch Contacts</string>
    <string name="fetch_accounts_button">Fetch Accounts</string>
    <string name="clear_button">Clear</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_leads">Leads</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_new_lead">NewLeadActivity</string>


    <string name="form_first_name">First Name</string>
    <string name="form_last_name">Last Name</string>
    <string name="form_company">Company</string>
    <string name="form_email">Email address</string>
    <string name="form_phone">Phone</string>
    <string name="form_notes">Notes</string>
    <string name="form_save">Save</string>
    <string name="form_update">Update</string>
    <string name="title_activity_edit_lead">EditLeadActivity</string>

    <string name="tab_lead">Lead</string>
    <string name="tab_photos">Photos</string>
    <string name="tab_notes">Notes</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="lead_fragment_placeholder">Lead view</string>
    <string name="gallery_fragment_placeholder">Gallery fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="toast_nothing_to_sync">Nothing to sync</string>

    <string name="toast_started_lead_service">Syncing Leads ...</string>
    <string name="toast_finished_leads_upload">Times uploaded to SalesForce"</string>
    <string name="toast_error">Unexpected error</string>

    <string name="you_are_offline">You have no internets- we\'ll try to sync later</string>
</resources>
